fix(table-info.component.scss): let column-element class name to be overflow-wrap
let column-element class name can be overflow-wrap as anywhere.

--- a/src/app/components/table-info/table-info.component.scss
+++ b/src/app/components/table-info/table-info.component.scss
@@ -8,6 +8,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(1rem, 1fr));
   border-bottom: 1px solid #e1ecc4;
+  overflow-wrap: anywhere;
 
   > .column-element {
     padding: 1rem;
